--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,11 +3,17 @@ spring:
     username: macbookpro
     password: 19801980
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/todo
+    url: jdbc:postgresql://localhost:5432/test
 
 
 
 
 application:
-  hub-url: http://localhost:8080/api/v1/project-agent
-  name: todo
+  register-url: http://localhost:8080/api/v1/project-agent
+  get-user-update-url: http://localhost:8080/api/v1/agent/updates
+  name: project2
+  enable-register: false
+
+
+server:
+  port: 8082
